2004/04/02
	* In most views columns for 2nd Event Type added
	* Context menus modified to allow quick change of 2nd Event Type
	* Toolbar simplified (only most used actions)
	* Terminology fixes ("cost type"->"event type",
          "trace data"->"profile data", long names of Ir,Dr,...)
	* Sorting costs in lists is always descending now
	* New File menu item: "Add..." other profile data to current window
        * Detect Cachegrind format by "events:" content, not file name
	  Allows for arbitrary names of profile data files.

2004/03/25
	* New Class Addr as wrapper for memory addresses. Use 64bit
	  to allow loading of data produced on 64bit architectures

2004/03/17

	* costtypeview.cpp, tracedata.h/cpp:
	  Fixed deletion of custom types
	* cachegrindloader.cpp, tracedata.h/cpp:
	  Moved String compression handling in Cachegrind files
	  to CachegrindLoader
	* Do not show inclusive cost column in FunctionSelection
	  side bar if not available
	* Remove "isPartOfTrace" from Loader interface
	  (we allow parts from multiple experiments for comp.)
	* partview.cpp, partlistitem.h/cpp:
	  Remove Column Callees, add Trigger

2003/05/10

	* Status progress on loading and cycle calculation
	* Corrected order of trace parts (PID/PartNo/ThreadID)
	* Allow adding traces (BUGGY...)

2003/02/06

	* Version 0.3a
	* Bugfixes:
	  - Compiles with KDE 3.0.x
	  - Always select a first cost type
	  - Loading from another directory


2002/11/28

	* Version 0.3
	