@@ -1,13 +1,15 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="kcachegrind" version="3">
+<kpartgui name="kcachegrind" version="4">
  <MenuBar>
   <Menu name="file"><text>&amp;File</text>
+   <Action name="file_add" append="open_merge"/>
    <Action name="reload" append="revert_merge"/>
    <Action name="dump" append="revert_merge"/>
    <Action name="export"/>
   </Menu>
   <Menu name="view"><text>&amp;View</text>
    <Action name="view_cost_type"/>
+   <Action name="view_cost_type2"/>
    <Action name="view_group_type"/>
    <Separator/>
    <Action name="view_split"/>
@@ -24,10 +26,12 @@
     <Action name="settings_show_profiledock"/>
    </Menu>
   </Menu>
+  <Menu name="help">
+   <Action name="help_show_tip"/>
+  </Menu>
  </MenuBar>
 
  <ToolBar name="mainToolBar" noMerge="1"><text>Main Toolbar</text>
-  <Action name="file_new"/>
   <Action name="file_open"/>
   <Action name="reload"/>
   <Action name="dump"/> 
@@ -36,11 +40,11 @@
   <Action name="go_back"/>
   <Action name="go_forward"/>
   <Separator/>
-  <Action name="view_split"/>
-  <Action name="view_split_dir"/>
   <Action name="view_percentage"/>
   <Action name="view_expanded"/>
   <Action name="view_cycles"/>
+  <Separator/>
+  <Action name="help_whats_this"/>
  </ToolBar>
  <ToolBar name="stateToolBar" noMerge="1"><text>State Toolbar</text> 
   <Action name="view_cost_type"/>
@@ -49,8 +53,5 @@
  <ToolBar name="queryToolBar" noMerge="1"><text>Query Toolbar</text> 
   <Action name="query_label"/>
   <Action name="query"/>
- </ToolBar>
- <ToolBar name="helpToolBar" noMerge="1"><text>Help Toolbar</text>
-  <Action name="help_whats_this"/>
  </ToolBar>
 </kpartgui>
